test/Sema/FallibleInit.dot

// VERIFY

struct FallibleInit {
    init {
        return none // expected-error {{cannot return 'none' from a non-fallible initializer}}
        // expected-note@-2 {{did you mean to use 'init?'?}}
    }

    init? {
        if true {
            return
        }
        else {
            return none
        }
    }
}